# full-stack-template

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
backend_app/: DockerFile  __main__.py
backend_app/alembic/: env.py
backend_app/cli/: main.py
backend_app/cli/commands/: user.py  workflows.py
backend_app/core/: __init__.py  celery_app.py  celery_config.py  security.py  settings.py
backend_app/crud/: user.py
backend_app/db/: __init__.py
backend_app/models/: __init__.py  base.py  user.py
backend_app/service/: main.py  router.py
backend_app/service/api/v1/: user.py
backend_app/tasks/: __init__.py  user.py
backend_app/tasks/x_downloader/: downloader.py
entrypoints/: backend.sh  backend_worker.sh
